# scale-codec

./: .gitignore  Cargo.toml  README.md  bool.go  codec.go  codec_test.go  compact.go  compact_test.go  enum.go  enum_parser.go  enum_parser.y  enum_test.go  go.mod  numbers.go  numbers_test.go  option.go  option_test.go  result.go  result_test.go  tuple.go  tuple_test.go  vectors.go
enum_script/: enum.go  enum_test.go  go.mod  main.go
tests/enums/: go.mod  go.sum  main.go  simple_enum.go  simple_enum.scale  simple_enum_test.go
tests/rust-scale-codec/: Cargo.toml
tests/rust-scale-codec/src/: lib.rs
tests/wasm/: Cargo.toml  README.md
tests/wasm/src/: main.rs
tests/wasm/testdata/: main.go  main.wasm  main.wat
