[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-wasix = "0.18.0"
wasmer = { version = "4.2.5", default-features = true }
tokio = { version = "1", features = ["full"] }
parity-scale-codec = { version = "3.6.8", default_features = true, features = [
    "derive",
] }
